# AIVAR_4.3

./: .dockerignore  .env.example  .gitignore  Makefile  PS-4.3-Implementation-Plan.md  README.md  docker-compose.ec2.yml  docker-compose.yml  pyproject.toml  simulate.py
.cursor/rules/: phase-workflow.mdc
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_enable_pgvector_create_tables.py
app/: __init__.py  config.py  dependencies.py  exceptions.py  logging.py  main.py  ratelimit.py  runtime_config.py
app/api/: admin.py  alerts.py  events.py  health.py  patterns.py  risk.py
app/db/: __init__.py  models.py  repositories.py  session.py
app/detection/: __init__.py  orchestrator.py
app/detectors/: __init__.py  base.py  capability.py  enumeration.py  escalation.py  normalize.py  probing.py
app/embeddings/: __init__.py  service.py
app/integrations/: __init__.py  langfuse_mirror.py
app/llm/: __init__.py  anthropic_provider.py  capability_prompt.py  factory.py  groq_provider.py  guardrail.py  provider.py  stub_provider.py
app/middleware/: rate_limit.py
app/schemas/: alerts.py  config.py  events.py  (+2 more)
deploy/: deploy.sh  ec2_bootstrap.sh  migrate.sh  post_deploy_smoke.sh
docker/: Dockerfile.api
sim/: __init__.py  personas.py  runner.py
tests/: conftest.py  detector_helpers.py  orchestrator_helpers.py  test_api.py  test_concurrency.py  test_enumeration.py  test_escalation.py  test_langfuse_mirror.py  test_orchestrator.py  test_phase0.py  test_phase1.py  test_phase2.py  test_phase3.py  test_probing.py  test_scoring.py  test_simulate.py
(+3 files in other folders)
