[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adversarial-detector"
version = "0.1.0"
description = "Cross-session adversarial pattern detector (PS-4.3)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",
    "httpx>=0.28.0",
    "fastembed>=0.5.0",
    "numpy>=2.0.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.14.0",
    "anthropic>=0.49.0",
    "tenacity>=9.0.0",
    "langfuse>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501"]
"app/db/models.py" = ["E501"]
"app/scoring/risk_scorer.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
